--- a/src/BotBry/ChatBox/ChatBox.module.css
+++ b/src/BotBry/ChatBox/ChatBox.module.css
@@ -137,93 +137,6 @@
     flex-direction: column;
 }
 
-
-
-.chatBox .chatBody .convoContainer .convo .thinking .wrapper {
-    padding: .5rem .75rem;
-    margin: 0 10px;
-    box-shadow: 0 0 5px -2px black;
-    width: fit-content;
-    max-width: 70vw;
-    height: fit-content;
-    border-radius: .5rem;
-    display: flex;
-    gap: .5rem;
-    background-color: #3094d3;
-    box-shadow: 0 0 10px -2px rgb(101, 101, 101);
-    animation: bumping 1s ease infinite;
-}
-
-.chatBox .chatBody .convoContainer .convo .thinking>img {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    padding: .2rem;
-    border-radius: 50%;
-    background-color: rgba(237, 237, 237, 0.827);
-    box-shadow: 0 0 10px -2px rgb(101, 101, 101);
-    animation: rotating 1.5s ease-in-out infinite;
-    margin-left: .5rem;
-}
-
-.chatBox .chatBody .convoContainer .convo .thinking .wrapper .dot {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background-color: var(--l-text-unhighlight);
-    animation: pulse 1.5s ease-in-out infinite;
-}
-
-.chatBox .chatBody .convoContainer .convo .thinking .wrapper .dot:nth-child(2) {
-    animation-delay: 0.2s;
-}
-
-.chatBox .chatBody .convoContainer .convo .thinking .wrapper .dot:nth-child(3) {
-    animation-delay: 0.4s;
-}
-
-@keyframes rotating {
-    0% {
-        transform: scale(1);
-    }
-
-    60% {
-        transform: scale(1.3) rotateZ(180deg);
-    }
-
-    100% {
-        transform: scale(1) rotateZ(360deg);
-    }
-}
-
-@keyframes bumping {
-
-    0%,
-    80%,
-    100% {
-        transform: scale(1);
-    }
-
-    40% {
-        transform: scale(1.1);
-    }
-}
-
-@keyframes pulse {
-
-    0%,
-    80%,
-    100% {
-        transform: scale(0.6);
-        background-color: rgb(255, 255, 255);
-    }
-
-    40% {
-        transform: scale(1.1);
-        background-color: #2b2b2b;
-    }
-}
-
 .chatBox .chatBody .chatInput {
     flex-shrink: 0;
     width: 100%;
@@ -269,6 +182,18 @@
 
 .chatWrapper .chatBox button:hover {
     background-color: #3c2dc3;
+}
+
+.darkChatBox {
+    background-color: var(--d-bg-color);
+}
+
+.darkChatBox header {
+    background-color: rgb(48, 47, 49);
+}
+
+.darkChatBox .botDescription {
+    color: white;
 }
 
 @media screen and (max-width: 600px) {
