--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Kadwa:wght@400;700&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Kulim+Park:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&family=Martian+Mono:wght@100..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Saira:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
@@ -22,6 +23,7 @@
     --font-title: "Saira", sans-serif;
     --font-normal: "Open Sans", sans-serif;
     --font-normal-1: "Inter", sans;
+    --font-normal-2: "Martian Mono", monospace;
 
     --p-smaller: clamp(.4rem, 2.5vw, .7rem);
     --p-small: clamp(.5rem, 2.5vw, .9rem);
