--- a/src/Components/ErrorNotification/ErrorNotification.module.css
+++ b/src/Components/ErrorNotification/ErrorNotification.module.css
@@ -5,7 +5,7 @@
     z-index: 3;
     left: 50%;
     transform: translateX(-50%);
-    width: 200px;
+    width: 300px;
     box-shadow: var(--l-box-shadow);
     padding: 1rem 2rem;
     color: red;
@@ -13,7 +13,7 @@
     font-family: var(--font-title);
     border-radius: 2rem;
     overflow: hidden;
-    font-size: var(--p-large);
+    font-size: var(--p-medium);
 }
 
 .errorNotification > i {
