--- a/src/Footer/Footer.module.css
+++ b/src/Footer/Footer.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     box-shadow: 0 -5px 10px -5px rgb(175, 175, 175); 
+    border-top: 1px solid gray;
 }
 
 .footer>hr {
