--- a/src/About/ExpertiseSection/ExpertiseSection.module.css
+++ b/src/About/ExpertiseSection/ExpertiseSection.module.css
@@ -6,6 +6,13 @@
     background-color: white;
     margin-top: -.5rem;
     font-family: var(--font-normal-2);
+    opacity: 0;
+    transition: all .5s linear;
+}
+
+.show {
+    opacity: 1;
+    transition: all .5s linear;
 }
 
 .expertise .top {
@@ -54,6 +61,45 @@
     transition: .3s ease-out;
     color: var(--l-text-color1);
     margin: 1rem;
+    opacity: 0;
+}
+
+.show .bottom .card:nth-of-type(1) {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .5s ease forwards;
+}
+.show .bottom .card:nth-of-type(2) {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .5s 0.25s ease forwards;
+}
+.show .bottom .card:nth-of-type(3) {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .5s .5s ease forwards;
+}
+.show .bottom .card:nth-of-type(4) {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .5s .75s ease forwards;
+}
+.show .bottom .card:nth-of-type(5) {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .5s 1s ease forwards;
+}
+.show .bottom .card:nth-of-type(6) {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .5s 1.25s ease forwards;
+}
+
+@keyframes toTop {
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 .expertise .bottom .card:hover {
