--- a/src/About/HeroSection/HeroSection.module.css
+++ b/src/About/HeroSection/HeroSection.module.css
@@ -4,6 +4,13 @@
     width: 100vw;
     height: fit-content;
     position: relative;
+    opacity: 0;
+    transition: all .5s ease;
+}
+
+.show {
+    opacity: 1;
+    transition: all .5s ease;
 }
 
 .heroSection .background {
@@ -21,6 +28,25 @@
     align-items: center;
     width: 50vw;
     height: 100vh;
+}
+
+.show .left {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop 1s ease-in forwards;
+}
+
+.show .right {
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .75s .75s ease-in forwards;
+}
+
+@keyframes toTop {
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 .heroSection .left .contents {
