--- a/src/About/Technologies/Technologies.module.css
+++ b/src/About/Technologies/Technologies.module.css
@@ -7,6 +7,13 @@
     margin-top: -.5rem;
     font-family: var(--font-normal-2);
     padding: 2rem;
+    opacity: 0;
+    transition: all .5s linear;
+}
+
+.show {
+    opacity: 1;
+    transition: all .5s linear;
 }
 
 .technologies .top {
@@ -40,6 +47,31 @@
     overflow-x: auto;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
+    opacity: 0;
+    transition: all .5s linear;
+}
+
+.technologies .bottom::-webkit-scrollbar {
+    background-color: transparent;
+    width: 5px;
+}
+
+.technologies .bottom::-webkit-scrollbar-thumb {
+    background-color: rgb(183, 183, 183);
+    border-radius: 5rem;
+}
+
+.show .bottom{
+    transform: translateY(200px);
+    opacity: 0;
+    animation: toTop .5s .75s ease forwards;
+}
+
+@keyframes toTop {
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 .technologies .bottom .card {
